Thu Feb 12 18:34:01 2015  multisnow  <infinity.blick.winkel@gmail.com>

	* ext/openssl/extconf.rb: check RAND_edg to support libressl.

	* ext/openssl/ossl_rand.c (ossl_rand_egd): define only if RAND_edg
	  is available.  [Fix GH-829]

Thu Feb 12 10:46:14 2015  Eric Hodel  <drbrain@segment7.net>

	* proc.c (proc_call):  Improve Proc#call documentation.  Patch by
	  Hsing-Hui Hsu.  [fix GH-761]

Thu Feb 12 04:33:02 2015  Benoit Daloze  <eregontp@gmail.com>

	* compar.c (cmp_equal): no more error hiding for Comparable#==.
	  It now behaves as other Comparable methods. See #7688.

	* test/ruby/test_comparable.rb: update related test.

Thu Feb 12 03:28:05 2015  Eric Wong  <e@80x24.org>

	* lib/set.rb (initialize): internal hash defaults to false

	* lib/set.rb (include?): use Hash#[] for optimized dispatch.
	  Patch by Ismael Abreu <ismaelga@gmail.com>
	  [ruby-core:67664] [Misc #10754]

Wed Feb 11 11:09:52 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/digest/digest_conf.rb (digest_conf): check for CommonDigest.

	* ext/digest/*/*cc.h: for Apple CommonCrypto/CommonDigest.h.

	* ext/digest/digest.h (DEFINE_FINISH_FUNC_FROM_FINAL): macro for
	  finish functions, by inverting arguments order.

	* ext/digest/digest_conf.rb (digest_conf): extract common
	  configurations.

Wed Feb 11 11:01:33 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/json/generator/generator.c (generate_json): get rid of
	  unnecessary recursive calls which can cause infinite recursion.
	  T_STRING may not have rb_cString.

Wed Feb 11 07:53:35 2015  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_word.rb: use skip method to skip test.

Tue Feb 10 11:38:28 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_insnhelper.c (vm_call_method): stop method search when a method
	  is not found in a refinement, to support undef in refinements.
	  [ruby-core:66741] [Bug #10578]

Tue Feb 10 11:19:11 2015  Shugo Maeda  <shugo@ruby-lang.org>
